# Boxy

./: .clang-tidy  Boxy.sln  Boxy.vcxproj  Boxy.vcxproj.filters  CMakeLists.txt  Main.cpp  README.md  glad.c  main.cpp
camera/: Camera.cpp  Camera.h
collision/: BoundingBox.cpp  BoundingBox.h  CollisionManager.cpp  CollisionManager.h
interfaces/: IRenderable.h
objects/: Enemy.cpp  Enemy.h  Fighter.cpp  Fighter.h  Floor.cpp  Floor.h  Object.cpp  Object.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Wall.cpp  Wall.h
rendering/: Drawable.cpp  Drawable.h
scene/: Scene.cpp  Scene.h
shaders/: Shader.h  ShaderProgram.cpp  ShaderProgram.h
shaders/shader_sources/: PlayerFragmentShader.glsl  PlayerVertexShader.glsl
utils/: Debug.h  Dimensions.h  FileHandling.h  Game.h  InputCallbacks.h  Logging.h  Math.h  Mouse.h  Timing.cpp  Timing.h  dimensions.h
utils/shapes/: Cuboid.cpp  Cuboid.h  Plane.cpp  Plane.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h
